--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,9 @@
             <div class="left-menu-container">
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
+                    <li> <a href="">Contact</a></li>
                     <li> <a href="aboutus.html">About us</a></li>
+                    
                 </ul>
             </div>
 
