--- a/aboutus.html
+++ b/aboutus.html
@@ -16,6 +16,7 @@
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="">About us</a></li>
                 </ul>
             </div>
 
