--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <div class="content">
             <div class="left-menu-container">
                 <ul class="menu">
+                    <li><a href="">Home page</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li> <a href="aboutus.html">About us</a></li>
+                    
                 </ul>
             </div>
 
